# drf-curd-postgres-docker

./: Dockerfile  README.md  django.sh  docker-compose.yml  pyproject.toml
curdapp/: models.py  serializers.py  urls.py  views.py
curdapp/migrations/: 0001_initial.py
drfcurd/: asgi.py  settings.py  urls.py  wsgi.py
